[gd_scene load_steps=2 format=3 uid="uid://cc8heywcrg2ha"]

[ext_resource type="Script" uid="uid://dtyo6ptmkmouo" path="res://scripts/ui/building_stats_popup.gd" id="1_4tqnm"]

[node name="BuildingStatsPopup" type="PanelContainer"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -40.0
offset_right = 75.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4tqnm")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "BUILDING NAME"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "BUILDING STATS"
horizontal_alignment = 1
